# CW5

./: README.md  employers_config.json  main.py  pyproject.toml
course_work_5/: config.py  user_interaction.py
course_work_5/api_clients/: __init__.py  base.py  entities.py  hh_client.py
course_work_5/cli/: init_db.py  search_employers.py
course_work_5/db/: loader.py  migrations.py
course_work_5/db/managers/: __init__.py  base.py  pg_db_manager.py
course_work_5/migrations/: 001_create_employers_table.sql  002_create_vacancies_table.sql
